<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_title_cache_settings"
        app:summary="@string/pref_title_cache_summ">

    <SwitchPreference
        app:defaultValue="false"
        app:key="keyCache"
        app:summary="@string/pref_description_cache"
        app:title="@string/pref_title_cache" />
    <ru.bootcode.smddatasheet.ExEditTextPreference
        app:enabled="true"
        app:singleLine="true"
        app:key="keySavePath"
        app:title="@string/pref_title_datasheet_save_path" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_search">

    <SwitchPreference
        app:key="keySwitchSearchName"
        app:title="@string/pref_search_by_name" />
    <SwitchPreference
        app:defaultValue="false"
        app:key="keySwitchSearchFunction"
        app:title="@string/pref_search_by_function" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
