<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_clear"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_off"
            android:title="@string/menu_favorite" />
    </group>

    <item android:title="@string/menu_database">
        <menu>
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_add_smd"
                android:title="@string/menu_add" />
            <item
                android:id="@+id/nav_edit"
                android:icon="@drawable/ic_edit"
                android:title="@string/menu_edit" />
        </menu>
    </item>
    <item android:title="@string/menu_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_tools" />
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_update"
                android:title="@string/menu_update" />
            <item
                android:id="@+id/nav_googlepdf"
                android:icon="@drawable/ic_pdf_open"
                android:title="@string/menu_googlepdf" />
        </menu>
    </item>

</menu>
