<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linlayBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00C8C8C8"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivCode"
        android:layout_width="32dp"
        android:layout_height="48dp"
        android:contentDescription="@string/tv_code"
        android:scaleType="center"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/tv_note"
                android:textSize="16sp"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/tv_name"
                android:textSize="16sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvMarker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/tv_marker"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:scaleType="center"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:contentDescription="@string/tv_code" />

</LinearLayout>