<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:text="@string/text_default"
        android:textColor="#ff8800"
        android:textSize="20sp" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="4dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_default"
            android:textSize="18sp" />

    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:background="@drawable/icshape_border_bottom"
        android:layout_height="1dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_marker"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvMarker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_default"
            android:textSize="18sp" />

    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:background="@drawable/icshape_border_bottom"
        android:layout_height="1dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_code"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_default"
            android:textSize="18sp" />

    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:background="@drawable/icshape_border_bottom"
        android:layout_height="1dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivCode"
            android:layout_width="match_parent"
            android:layout_height="426dp"
            android:layout_gravity="top"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="center"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintHorizontal_bias="0.0"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btnDataSheet"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_pdf_open"
            ads:layout_constraintBottom_toTopOf="@+id/adView"
            ads:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnFavorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/ic_favorite_off"
            ads:layout_constraintBottom_toTopOf="@+id/btnDataSheet"
            ads:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4325894448754236/6356575274"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>